--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
   flex-direction: column;
   place-content: space-between;
   margin-top: 30px;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 .total__grid {
