--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 
 .tips-box {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
   gap: 20px 30px;
   margin: 30px 0;
 }
@@ -111,6 +111,7 @@ body {
   padding: 5px;
   cursor: pointer;
   transition: 0.3s;
+  text-align: center;
 }
 #custom::placeholder {
   color: var(--App-verder-oscuro);
@@ -193,15 +194,14 @@ body {
   transition: 0.3s;
 }
 
-.errorPeople {
+.error-Input {
   border: 2px solid #ff0000;
 }
-.errorPorcentaje {
+.error-Porcentaje {
   padding-bottom: 5px;
   border-bottom: 2px solid #ff0000;
 }
-.errorSpan ,
-.errorSpan2 {
+.error-Span,.error-Zero{
   display: none;
   position: absolute;
   top: 3px; 
