Correccion de errores de diseño responsive

--- a/style.css
+++ b/style.css
@@ -1,226 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Space Mono", monospace;
-}
-
-:root {
-  /* box-title */
-  --box-title: rgb(197, 228, 231);
-  --box-title-title: rgb(63, 101, 102);
-
-  /* App */
-  --App-title: rgb(105, 119, 119);
-  --App-factura: rgb(243, 248, 251);
-  --App-verder-oscuro: rgb(0, 71, 75);
-  --App-celeste: rgb(39, 195, 176);
-  --App-focus: rgb(159, 232, 221);
-  /* Typography */
-  --sizeInput: 24px;
-  --Weights: 400, 500, 700;
-}
-body {
-  background-color: var(--box-title);
-}
-
-.box-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--box-title);
-  padding: 45px 45px 65px;
-}
-.title {
-  color: var(--box-title-title);
-  letter-spacing: 10px;
-}
-
-.app {
-  position: relative;
-  top: -20px;
-  border-radius: 25px;
-  background-color: #fff;
-  padding: 30px;
-  box-shadow: 0 0 30px rgba(36, 36, 36, 0.1);
-}
-
-.content-input {
-  position: relative;
-}
-.title-input {
-  color: var(--App-title);
-  font-weight: 700;
-  font-size: 18px;
-}
-.input {
-  width: 100%;
-  font-size: var(--sizeInput);
-  font-weight: 700;
-  text-align: end;
-  border: 2.7px solid transparent;
-  background-color: var(--App-factura);
-  color: var(--App-verder-oscuro);
-  padding: 5px 20px;
-  border-radius: 5px;
-  outline: none;
-  margin-top: 10px;
-}
-.input:focus {
-  border-color: var(--App-celeste);
-}
-.input-svg {
-  position: absolute;
-  top: 53px;
-  left: 20px;
-}
-
-.tips-box {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
-  gap: 20px 30px;
-  margin: 30px 0;
-}
-.tips-box label {
-  width: 100%;
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
-.percentage {
-  font-size: 26px;
-  font-weight: 700;
-  background-color: var(--App-verder-oscuro);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.percentage.active {
-  background-color: var(--App-focus);
-  color: var(--App-verder-oscuro);
-}
-#custom {
-  font-size: 24px;
-  font-weight: 700;
-  background-color: var(--App-factura);
-  border: 2.7px solid transparent;
-  color: var(--App-verder-oscuro);
-  border-radius: 5px;
-  padding: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-  text-align: center;
-}
-#custom::placeholder {
-  color: var(--App-verder-oscuro);
-  font-weight: 700;
-  text-align: center;
-  font-size: 26px;
-}
-#custom:focus {
-  outline: none;
-  border-color: var(--App-celeste);
-}
-
-.total {
-  background-color: var(--App-verder-oscuro);
-  padding: 35px;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  place-content: space-between;
-  margin-top: 30px;
-  overflow-x: hidden;
-}
-
-.total__grid {
-  display: grid;
-  grid-template-areas:
-    "titulo numero"
-    "parrafo numero"
-    "espacio espacio"
-    "titulo2 numero2"
-    "parrafo2 numero2";
-  margin-bottom: 60px;
-}
-.total .title-input {
-  grid-area: titulo;
-  color: #fff;
-}
-.total__person {
-  grid-area: parrafo;
-  color: gray;
-  height: 100%;
-}
-.total__precio {
-  color: var(--App-celeste);
-  font-weight: 700;
-  grid-area: numero;
-  font-size: 40px;
-  text-align: end;
-}
-
-.espacio {
-  height: 45px;
-}
-
-.total .sub-title2 {
-  grid-area: titulo2;
-  color: rgb(240, 255, 255);
-}
-.total__person2 {
-  grid-area: parrafo2;
-  color: gray;
-  height: 100%;
-}
-.total__precio2 {
-  color: var(--App-celeste);
-  font-weight: 700;
-  grid-area: numero2;
-  font-size: 40px;
-  text-align: end;
-}
-.btn {
-  background-color: var(--App-celeste);
-  color: var(--App-verder-oscuro);
-  font-size: 20px;
-  font-weight: 700;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.error-Input {
-  border: 2px solid #ff0000;
-}
-.error-Porcentaje {
-  padding-bottom: 5px;
-  border-bottom: 2px solid #ff0000;
-}
-.error-Span,.error-Zero{
-  display: none;
-  position: absolute;
-  top: 3px; 
-  right: 0;
-  color: #ff0000;
-}
-
-@media (min-width: 1200px) {
-  .app {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin: 0 12% 10%;
-  }
-  .contenido-principal {
-    width: 60%;
-  }
-  .total {
-    margin-top: 0;
-    width: 47%;
-  }
-}
+*{margin:0;padding:0;box-sizing:border-box;}:root{--box-title:rgb(197,228,231);--box-title-title:rgb(63,101,102);--App-title:rgb(105,119,119);--App-factura:rgb(243,248,251);--App-verder-oscuro:rgb(0,71,75);--App-celeste:rgb(39,195,176);--App-focus:rgb(159,232,221);--sizeInput:24px;--Weights:400,500,700;}body{background-color:var(--box-title);font-family:"Space Mono",monospace;}.box-title{display:flex;align-items:center;justify-content:center;background-color:var(--box-title);padding:45px 45px 65px;}.title{color:var(--box-title-title);letter-spacing:10px;}.app{position:relative;top:-20px;border-radius:25px;background-color:#fff;padding:30px;box-shadow:0 0 30px rgba(36,36,36,0.1);}.content-input{position:relative;}.title-input{color:var(--App-title);font-weight:700;font-size:18px;}.input{width:100%;font-size:var(--sizeInput);font-weight:700;text-align:end;border:2.7px solid transparent;background-color:var(--App-factura);color:var(--App-verder-oscuro);padding:5px 20px;border-radius:5px;outline:none;margin-top:10px;}.input:focus{border-color:var(--App-celeste);}.input-svg{position:absolute;top:53px;left:20px;}.tips-box{display:grid;grid-template-columns:repeat(auto-fill,minmax(8rem,1fr));gap:20px 30px;margin:30px 0;}.tips-box label{width:100%;grid-column-start:1;grid-column-end:-1;}.percentage{font-size:26px;font-weight:700;background-color:var(--App-verder-oscuro);color:#fff;border:none;border-radius:5px;padding:8.5px 5px;cursor:pointer;transition:0.3s;}.percentage.active{background-color:var(--App-focus);color:var(--App-verder-oscuro);}#custom{font-size:24px;font-weight:700;background-color:var(--App-factura);border:2.7px solid transparent;color:var(--App-verder-oscuro);border-radius:5px;padding:5px;cursor:pointer;transition:0.3s;text-align:center;margin-top:0;}#custom::placeholder{color:var(--App-verder-oscuro);font-weight:700;text-align:center;font-size:26px;}#custom:focus{outline:none;border-color:var(--App-celeste);}.total{background-color:var(--App-verder-oscuro);padding:35px;border-radius:25px;display:flex;flex-direction:column;place-content:space-between;margin-top:30px;overflow-x:hidden;}.total__grid{white-space:nowrap;display:grid;grid-template-areas:"titulo numero""parrafo numero""espacio espacio""titulo2 numero2""parrafo2 numero2";margin-bottom:60px;}.total .title-input{grid-area:titulo;color:#fff;}.total__person{grid-area:parrafo;color:gray;height:100%;}.total__precio{color:var(--App-celeste);font-weight:700;grid-area:numero;font-size:40px;text-align:end;}.espacio{height:45px;}.total .sub-title2{grid-area:titulo2;color:rgb(240,255,255);}.total__person2{grid-area:parrafo2;color:gray;height:100%;}.total__precio2{color:var(--App-celeste);font-weight:700;grid-area:numero2;font-size:40px;text-align:end;}.btn{background-color:var(--App-celeste);color:var(--App-verder-oscuro);font-size:20px;font-weight:700;border:none;border-radius:5px;padding:10px;cursor:pointer;transition:0.3s;}.btn:hover{background-color:#12a191;}.error-Input{border:2px solid #ff0000;}.error-Porcentaje{padding-bottom:5px;border-bottom:2px solid #ff0000;}.error-Span,.error-Zero{display:none;position:absolute;top:3px;right:0;color:#ff0000;}@media (min-width:1200px){.app{display:flex;justify-content:center;gap:30px;margin:0 12% 10%;}.contenido-principal{width:60%;}.total{margin-top:0;width:47%;}}@media (max-width:510px){.app{padding:23px;}.total{padding:25px;}.total__precio,.total__precio2{font-size:30px;}.title-input,.sub-title2{font-size:17px;}.total__person,.total__person2{font-size:14px;}}
