--- a/style.css
+++ b/style.css
@@ -1,1 +1,240 @@
-*{margin:0;padding:0;box-sizing:border-box;}:root{--box-title:rgb(197,228,231);--box-title-title:rgb(63,101,102);--App-title:rgb(105,119,119);--App-factura:rgb(243,248,251);--App-verder-oscuro:rgb(0,71,75);--App-celeste:rgb(39,195,176);--App-focus:rgb(159,232,221);--Weights:400,500,700;}body{font-size: 22px; min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;background-color:var(--box-title);font-family:"Space Mono",monospace;}.title{text-align:center;margin-top:50px;margin-bottom:50px;color:var(--box-title-title);letter-spacing:10px;}.app{border-radius:25px;background-color:#fff;padding:30px;box-shadow:0 0 30px rgba(36,36,36,0.1);}.content-input{position:relative;}.title-input{color:var(--App-title);font-weight:700;font-size:25px;}.input{width:100%;font-size:1.5em;font-weight:700;text-align:end;border:2.7px solid transparent;background-color:var(--App-factura);color:var(--App-verder-oscuro);padding:5px 20px;border-radius:5px;outline:none;margin-top:10px;}.input:focus{border-color:var(--App-celeste);}.input-svg{position:absolute;top:60px;left:20px;height: 23px;}.tips-box{display:grid;grid-template-columns:repeat(auto-fill,minmax(9.4rem,1fr));gap:20px 30px;margin:30px 0;}.tips-box label{width:100%;grid-column-start:1;grid-column-end:-1;}.percentage{font-size:30px;font-weight:700;background-color:var(--App-verder-oscuro);color:#fff;border:none;border-radius:5px;padding:9px 5px;cursor:pointer;transition:0.3s;}.percentage.active{background-color:var(--App-focus);color:var(--App-verder-oscuro);}#custom{font-size:24px;font-weight:700;background-color:var(--App-factura);border:2.7px solid transparent;color:var(--App-verder-oscuro);border-radius:5px;padding:5px;cursor:pointer;transition:0.3s;text-align:center;margin-top:0;}#custom::placeholder{color:var(--App-verder-oscuro);font-weight:700;text-align:center;font-size:26px;}#custom:focus{outline:none;border-color:var(--App-celeste);}.total{background-color:var(--App-verder-oscuro);padding:35px;border-radius:25px;display:flex;flex-direction:column;place-content:space-between;margin-top:30px;overflow-x:hidden;}.total__grid{white-space:nowrap;display:grid;grid-template-areas:"titulo numero""parrafo numero""espacio espacio""titulo2 numero2""parrafo2 numero2";margin-bottom:60px;}.total .title-input{grid-area:titulo;color:#fff;}.total__person{font-size:19px;grid-area:parrafo;color:gray;height:100%;}.total__person:nth-child(3){grid-area:parrafo2;}.total__precio{color:var(--App-celeste);font-weight:700;grid-area:numero;font-size:40px;text-align:end;}.espacio{height:45px;}.total .sub-title2{grid-area:titulo2;color:rgb(240,255,255);}.total__person2{grid-area:parrafo2;color:gray;height:100%;}.total__precio2{color:var(--App-celeste);font-weight:700;grid-area:numero2;font-size:40px;text-align:end;}.btn{background-color:var(--App-celeste);color:var(--App-verder-oscuro);font-size:26px;font-weight:700;border:none;border-radius:5px;padding:10px;cursor:pointer;transition:0.3s;}.btn:hover{background-color:#12a191;}.error-Input{border:2px solid #ff0000;}.error-Porcentaje{padding-bottom:5px;border-bottom:2px solid #ff0000;}.error-Span,.error-Zero{display:none;position:absolute;top:3px;right:0;color:#ff0000;}@media (min-width:1200px){.title{margin-top:-60px;margin-bottom:60px}.app{display:flex;justify-content:center;gap:30px;}.contenido-principal{width:60%;}.total{margin-top:0;width:47%;}}@media (max-width:510px){.app{padding:23px;}.total{padding:25px;}.total__precio,.total__precio2{font-size:30px;}.title-input,.sub-title2{font-size:17px;}.total__person{font-size:14px;}}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --box-title: rgb(197, 228, 231);
+  --box-title-title: rgb(63, 101, 102);
+  --App-title: rgb(105, 119, 119);
+  --App-factura: rgb(243, 248, 251);
+  --App-verder-oscuro: rgb(0, 71, 75);
+  --App-celeste: rgb(39, 195, 176);
+  --App-focus: rgb(159, 232, 221);
+  --Weights: 400, 500, 700;
+}
+body {
+  font-size: 19px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--box-title);
+  font-family: "Space Mono", monospace;
+}
+.title {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: var(--box-title-title);
+  letter-spacing: 10px;
+}
+.app {
+  border-radius: 25px;
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 0 0 30px rgba(36, 36, 36, 0.1);
+}
+.content-input {
+  position: relative;
+}
+.title-input {
+  color: var(--App-title);
+  font-weight: 700;
+  font-size: 22px;
+}
+.input {
+  width: 100%;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-align: end;
+  border: 2px solid transparent;
+  background-color: var(--App-factura);
+  color: var(--App-verder-oscuro);
+  padding: 7px 20px;
+  border-radius: 5px;
+  outline: none;
+  margin-top: 10px;
+}
+.input:focus {
+  border-color: var(--App-celeste);
+}
+.input-svg {
+  position: absolute;
+  top: 60px;
+  left: 20px;
+  height: 23px;
+}
+.selectTip {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(9.25rem, 1fr));
+  gap: 20px 30px;
+  margin: 40px 0;
+}
+.selectTip label {
+  width: 100%;
+  grid-column-start: 1;
+  grid-column-end: -1;
+}
+.selectTip__percentage {
+  font-size: 28px;
+  font-weight: 700;
+  background-color: var(--App-verder-oscuro);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-family: "Space Mono", monospace;
+}
+.selectTip__percentage.active {
+  background-color: var(--App-focus);
+  color: var(--App-verder-oscuro);
+}
+#custom {
+  font-size: 24px;
+  font-weight: 700;
+  background-color: var(--App-factura);
+  border: 2.7px solid transparent;
+  color: var(--App-verder-oscuro);
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  text-align: center;
+  margin-top: 0;
+}
+#custom::placeholder {
+  color: var(--App-verder-oscuro);
+  font-weight: 700;
+  text-align: center;
+  font-size: 26px;
+}
+#custom:focus {
+  outline: none;
+  border-color: var(--App-celeste);
+}
+.total {
+  background-color: var(--App-verder-oscuro);
+  padding: 35px;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  place-content: space-between;
+  margin-top: 30px;
+  overflow-x: hidden;
+}
+.total__grid {
+  white-space: nowrap;
+  display: grid;
+  grid-template-areas: "titulo numero" "parrafo numero" "espacio espacio" "titulo2 numero2" "parrafo2 numero2";
+  margin-bottom: 60px;
+}
+.total .title-input {
+  grid-area: titulo;
+  color: #fff;
+}
+.total__person {
+  font-size: 19px;
+  grid-area: parrafo;
+  color: gray;
+  height: 100%;
+}
+.total__person:nth-child(3) {
+  grid-area: parrafo2;
+}
+.total__precio {
+  color: var(--App-celeste);
+  font-weight: 700;
+  grid-area: numero;
+  font-size: 40px;
+  text-align: end;
+}
+.espacio {
+  height: 45px;
+}
+.total .sub-title2 {
+  grid-area: titulo2;
+  color: rgb(240, 255, 255);
+}
+.total__person2 {
+  grid-area: parrafo2;
+  color: gray;
+  height: 100%;
+}
+.total__precio2 {
+  color: var(--App-celeste);
+  font-weight: 700;
+  grid-area: numero2;
+  font-size: 40px;
+  text-align: end;
+}
+.total__btn {
+  font-family: "Space Mono", monospace;
+  text-transform: uppercase;
+  font-size: 26px;
+  font-weight: 700;
+  background-color: var(--App-celeste);
+  color: var(--App-verder-oscuro);
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.total__btn:hover {
+  background-color: #12a191;
+}
+.error-Input {
+  outline: 2px solid #ff0000;
+}
+.error-Zero {
+  display: none;
+  position: absolute;
+  top: 3px;
+  right: 0;
+  color: #ff0000;
+}
+@media (min-width: 1200px) {
+  .title {
+    margin-top: -60px;
+    margin-bottom: 60px;
+  }
+  .app {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 42px;
+    max-width: 1162px;
+  }
+  .main {
+    width: 55%;
+    padding: 35px;
+  }
+  .total {
+    margin-top: 0;
+    width: 45%;
+    padding-block: 50px;
+  }
+}
+@media (max-width: 510px) {
+  .app {
+    padding: 23px;
+  }
+  .total {
+    padding: 25px;
+  }
+  .total__precio,
+  .total__precio2 {
+    font-size: 30px;
+  }
+  .title-input,
+  .sub-title2 {
+    font-size: 17px;
+  }
+  .total__person {
+    font-size: 14px;
+  }
+}
